--- a/src/components/sign-up-form/sign-up-form.styles.scss
+++ b/src/components/sign-up-form/sign-up-form.styles.scss
@@ -1,10 +1,23 @@
-.sign-up-container{
-    display:flex;
-    flex-direction: column; 
-    width :380px;
-
-    h2{
-        margin:10px 0;
-    }
-
-}
+/* sign-in-form.styles.scss */
+.sign-in-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
+  }
+  
+  h2 {
+    margin-bottom: 10px;
+  }
+  
+  span {
+    margin-bottom: 20px;
+  }
+  
+  .buttons-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  
